crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__complex_condition.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/complex_condition.cm
input_file: test_data/control_flow/complex_condition.cm
---
Fixture: control_flow/complex_condition.cm
============================================================
Source code:
fn complex_condition() -> felt {
    let x = 10;
    let y = 5;
    let cond = x == 2 && y != 3;
    if (cond || x == y){
        return 0;
    } else {
        return 1;
    }
}

============================================================
Generated MIR:
module {
  // Function 0
  fn complex_condition {
    entry: 0

    0:
      %0 = 10
      %1 = 5
      %2 = %0 Eq 2
      %3 = %1 Neq 3
      %4 = %2 And %3
      %5 = %0 Eq %1
      %6 = %4 Or %5
      if %6 then jump 1 else jump 2

    1:
      return 0

    2:
      return 1

  }

}
