crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__if_both_return.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/if_both_return.cm
input_file: test_data/control_flow/if_both_return.cm
---
Fixture: control_flow/if_both_return.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 3 // entry, then, else. NO merge block.
//!ASSERT NOT_CONTAINS: jump 3 // Should not jump to a merge block.

// Tests an `if-else` where both branches terminate with a `return`.
// No merge block should be generated.
fn test(x: felt) -> felt {
    if (x == 0) {
        return 1;
    } else {
        return 2;
    }
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 1

    2:
      return 2

  }

}
