crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__if_else.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/if_else.cm
input_file: test_data/control_flow/if_else.cm
---
Fixture: control_flow/if_else.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 4 // entry, then, else, merge

// Tests a standard `if-else` statement where both branches continue execution.
fn test(x: felt) -> felt {
    let a = 0;
    if (x == 10) {
        a = 1;
    } else {
        a = 2;
    }
    return a;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    parameters: [0]
    entry: 0

    0:
      %1 = 0
      if %0 Eq 10 then jump 1 else jump 2

    1:
      store %1, 1
      jump 3

    2:
      store %1, 2
      jump 3

    3:
      return %1

  }

}
