crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__if_else_with_merge.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/if_else_with_merge.cm
input_file: test_data/control_flow/if_else_with_merge.cm
---
Fixture: control_flow/if_else_with_merge.cm
============================================================
Source code:
fn test_if_else(x: felt) -> felt {
    let y = 0;
    if (x == 0) {
        y = 1;
    } else {
        y = 2;
    }
    return y;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_if_else {
    parameters: [0]
    entry: 0

    0:
      %1 = 0
      if %0 then jump 2 else jump 1

    1:
      store %1, 1
      jump 3

    2:
      store %1, 2
      jump 3

    3:
      return %1

  }

}
