crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__if_no_else.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/if_no_else.cm
input_file: test_data/control_flow/if_no_else.cm
---
Fixture: control_flow/if_no_else.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 3 // entry, then, merge

// Tests a simple `if` statement without an `else` branch.
// A merge block must be created for the fall-through path.
fn test(x: felt) -> felt {
    let a = 10;
    if (x == 5) {
        a = 20;
    }
    let x = 4;
    return a;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    parameters: [0]
    entry: 0

    0:
      %1 = 10
      if %0 Eq 5 then jump 1 else jump 2

    1:
      store %1, 20
      jump 2

    2:
      return %1

  }

}
