crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__if_partial_return.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/if_partial_return.cm
input_file: test_data/control_flow/if_partial_return.cm
---
Fixture: control_flow/if_partial_return.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 4 // entry, then, else, merge
//!ASSERT CONTAINS: return 30

// Tests an `if-else` where one branch returns and the other continues.
// This is a critical test for correct merge block generation.
fn test(x: felt) -> felt {
    if (x == 5) {
        return 10;
    } else {
        // This branch continues, so a merge block is required.
        let y = x + 1;
    }
    // This code must be reachable and generated in the merge block.
    return 30;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    parameters: [0]
    entry: 0

    0:
      if %0 Eq 5 then jump 1 else jump 2

    1:
      return 10

    2:
      jump 3

    3:
      return 30

  }

}
