crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__infinite_loop.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/infinite_loop.cm
input_file: test_data/control_flow/infinite_loop.cm
---
Fixture: control_flow/infinite_loop.cm
============================================================
Source code:
fn test_infinite_loop() -> felt {
    let counter = 0;

    loop {
        counter = counter + 1;
        if (counter == 10) {
            break;
        }
    }

    return counter;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_infinite_loop {
    entry: 0

    0:
      %0 = 0
      jump 1

    1:
      %0 = %0 Add 1
      if %0 Eq 10 then jump 3 else jump 4

    2:
      return %0

    3:
      jump 2

    4:
      jump 1

  }

}
