crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__loop_with_breaks.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/loop_with_breaks.cm
input_file: test_data/control_flow/loop_with_breaks.cm
---
Fixture: control_flow/loop_with_breaks.cm
============================================================
Source code:
fn test_loop_with_breaks() -> felt {
    let count = 0;
    let result = 0;

    loop {
        count = count + 1;

        if (count == 5) {
            continue;
        }

        result = result + count;

        if (count == 10) {
            break;
        }
    }

    return result;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_loop_with_breaks {
    entry: 0

    0:
      %0 = 0
      %1 = 0
      jump 1

    1:
      %0 = %0 Add 1
      if %0 Eq 5 then jump 3 else jump 4

    2:
      return %1

    3:
      jump 1

    4:
      %1 = %1 Add %0
      if %0 Eq 10 then jump 5 else jump 6

    5:
      jump 2

    6:
      jump 1

  }

}
