crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__nested_for_loops.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/nested_for_loops.cm
input_file: test_data/control_flow/nested_for_loops.cm
---
Fixture: control_flow/nested_for_loops.cm
============================================================
Source code:
fn test_nested_for_loops() -> felt {
    //!ASSERT FUNCTION_COUNT: 1

    let result = 0;

    for (let i = 0; i < 3; i = i + 1) {
        for (let j = 0; j < 4; j = j + 1) {
            result = result + 1;
        }
    }

    return result;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_nested_for_loops {
    entry: 0

    0:
      %0 = 0
      %1 = 0
      jump 1

    1:
      %2 = %1 Less 3
      if %2 then jump 2 else jump 4

    2:
      %3 = 0
      jump 5

    3:
      %1 = %1 Add 1
      jump 1

    4:
      return %0

    5:
      %4 = %3 Less 4
      if %4 then jump 6 else jump 8

    6:
      %0 = %0 Add 1
      jump 7

    7:
      %3 = %3 Add 1
      jump 5

    8:
      jump 3

  }

}
