crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__nested_loops.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/nested_loops.cm
input_file: test_data/control_flow/nested_loops.cm
---
Fixture: control_flow/nested_loops.cm
============================================================
Source code:
fn test_nested_loops() -> felt {
    let result = 0;
    let i = 0;

    while (i != 3) {
        let j = 0;
        while (j != 4) {
            result = result + 1;
            j = j + 1;
        }
        i = i + 1;
    }

    return result;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_nested_loops {
    entry: 0

    0:
      %0 = 0
      %1 = 0
      jump 1

    1:
      if %1 Neq 3 then jump 2 else jump 3

    2:
      %3 = 0
      jump 4

    3:
      return %0

    4:
      if %3 Neq 4 then jump 5 else jump 6

    5:
      %0 = %0 Add 1
      %3 = %3 Add 1
      jump 4

    6:
      %1 = %1 Add 1
      jump 1

  }

}
